--- a/src/style.css
+++ b/src/style.css
@@ -91,6 +91,7 @@ a:hover {
 
 #tooltip {
   font-family: "aptly", sans-serif;
+  font-size: 1.3rem;
   font-weight: 400;
   font-style: normal;
   position: absolute;
@@ -98,7 +99,6 @@ a:hover {
   color: #000;
   padding: 6px 8px;
   border-radius: 4px;
-  font-size: 12px;
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.2s;
