--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,21 @@ body {
   margin: 0;
 }
 
+.floating-dot {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  animation: float 6s infinite ease-in-out alternate;
+  pointer-events: none;
+  z-index: 0;
+}
+
+@keyframes float {
+  0% { transform: translateY(0px); }
+  100% { transform: translateY(-100px); }
+}
+
 .startscreen {
   height: 100vh;
   display: flex;
@@ -12,6 +27,7 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+  z-index:0;
 }
 
 .center-content {
@@ -20,6 +36,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-grow: 1;
+  z-index: 2;
 }
 
 h1 {
@@ -45,6 +62,7 @@ p {
   font-weight: 400;
   font-style: normal;
   font-size: 1rem;
+  color: #ffffff;
 }
 
 a {
