--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,26 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index:0;
+  z-index:1;
+}
+
+.secondscreen {
+  height: 50vh;
+  padding: 2.5rem;
+  text-align: center;
+  font-family: "aptly", sans-serif;
+  color: #5d2720;
+  margin-bottom: 20%;
+  z-index: 1;
+}
+
+
+
+.secondscreen p {
+  font-size: 2rem;
+  margin: 0.5rem auto;
+  max-width: 80vw;
+  line-height: 1.2;
 }
 
 .center-content {
@@ -88,13 +107,14 @@ a:hover {
   font-weight: 400;
   font-style: normal;
   color: #5d2720;
-  margin-left: 20vw;
+  
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
   margin: 2rem;
+  margin-left: 20vw;
 }
 
 #category-btn, #pizza-btn {
