--- a/src/style.css
+++ b/src/style.css
@@ -270,3 +270,127 @@ a:hover {
     transform: translate3d(0, 0, 0) translateZ(0);
   }
 }
+
+
+/* ---------- 4th screen ---------- */
+
+.fourthscreen {
+  width: 100%;
+  margin: 0;
+  padding: 4rem 0 4rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+}
+
+.flip-card {
+  width: 100%;
+  cursor: pointer;
+  perspective: 1000px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  max-width: 980px;
+  transition: transform 0.9s;
+  transform-style: preserve-3d;
+
+}
+
+.flip-card-inner.flipped {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  min-height: 220px;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  padding: 1.5rem;
+  font-family: "aptly", sans-serif;
+  border: none;
+}
+
+.flip-card-front {
+  background: transparent;
+  color: #222;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+  background: #ff9239;
+  border: 2px solid #000000;
+  box-shadow: rgba(0, 0, 0, 0.25) 6px 12px 18px -10px;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+}
+
+.top-3-list p {
+  margin: 0.5rem 0;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+/* Optional: Button text on front */
+.flip-card-front p {
+  color: #fff;
+  margin-top: 1rem;
+  font-size: 1.1rem;
+}
+
+/* Pizza vis in sales on the */
+
+.bar-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+
+.bar-label {
+  min-width: 200px;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #fff;
+}
+
+.bar {
+  height: 28px;
+  
+  min-width: 80px;
+
+  background-color: #ffffff;
+  border-radius: 8px;
+  transition: width 0.6s ease;
+  display: flex;
+  align-items: center;
+  padding-left: 0.75rem;
+  color: #ff9239;
+  font-weight: 600;
+  font-size: 0.95rem;
+}
+
+.top-3-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  margin-top: 1rem;
+  width: 100%;
+  max-width: 600px;
+}
+
