--- a/src/style.css
+++ b/src/style.css
@@ -287,7 +287,6 @@ a:hover {
 .flip-card {
   width: 100%;
   cursor: pointer;
-  perspective: 1000px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -296,7 +295,7 @@ a:hover {
 .flip-card-inner {
   position: relative;
   width: 100%;
-  max-width: 980px;
+  max-width: 680px;
   transition: transform 0.9s;
   transform-style: preserve-3d;
 
@@ -322,10 +321,6 @@ a:hover {
   border: none;
 }
 
-.flip-card-front {
-  background: transparent;
-  color: #222;
-}
 
 .flip-card-back {
   transform: rotateY(180deg);
@@ -338,28 +333,16 @@ a:hover {
   border-top-right-radius: 15px 225px;
 }
 
-.top-3-list p {
-  margin: 0.5rem 0;
-  font-size: 1.3rem;
-  font-weight: bold;
-}
 
-/* Optional: Button text on front */
-.flip-card-front p {
-  color: #fff;
-  margin-top: 1rem;
-  font-size: 1.1rem;
-}
 
 /* Pizza vis in sales on the */
 
 .bar-container {
-  width: 100%;
   display: flex;
   align-items: center;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
-
 
 .bar-label {
   min-width: 200px;
@@ -370,27 +353,18 @@ a:hover {
 
 .bar {
   height: 28px;
-  
-  min-width: 80px;
-
+  width: 100%;
   background-color: #ffffff;
   border-radius: 8px;
-  transition: width 0.6s ease;
   display: flex;
   align-items: center;
-  padding-left: 0.75rem;
+  justify-content: center;
   color: #ff9239;
   font-weight: 600;
   font-size: 0.95rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.top-3-list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 1rem;
-  margin-top: 1rem;
-  width: 100%;
-  max-width: 600px;
-}
+
+
 
